--- a/about/about.html
+++ b/about/about.html
@@ -45,6 +45,15 @@
       </nav>
 
       <!-- NAVBAR END -->
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>About Us</h1>
+              
+          </div>
+        </div>
+      </div>
+
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
