--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,7 @@
     <title>CONTACT</title>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<link rel="stylesheet" href="../style.css">
 </head>
 <body class="bg-dark" >
 
@@ -48,8 +49,9 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1>About Us</h1>
-              
+            <h1 >About Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium fugiat ea voluptas recusandae. Vero impedit deserunt explicabo autem quibusdam! Exercitationem ad consequatur corporis ullam magni, asperiores impedit ipsum aut dolores.</p>
+
           </div>
         </div>
       </div>
