--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HOME PAGE</title>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-dark" >
 
@@ -23,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about/about.html">ABOUT</a>
+                <a class="nav-link" href="/about/index.html">ABOUT</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -134,11 +135,16 @@
     </div>
   </div>
   
-<!-- CARD END -->
 </div>
+<!-- CARD END -->
 
   <!-- layout END -->
-
+<footer>
+  <div class="tinggi ">
+    <div class="tq">
+    </div>
+  </div>
+</footer>
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
