--- a/paket/index.html
+++ b/paket/index.html
@@ -50,7 +50,7 @@
       <div class="card m-3" style="max-width: 540px; cursor:pointer;">
         <div class="row g-0" >
           <div class="col-md-4">
-            <img src="/asets/carousel1.jpg" class="img-fluid " alt="..." style="height: 100%;">
+            <img src="../asets/carousel1.jpg" class="img-fluid " alt="..." style="height: 100%;">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -64,7 +64,7 @@
       <div class="card m-3" style="max-width: 540px; cursor:pointer;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="/asets/carousel2.jpg" class="img-fluid " alt="..." style="height: 100%;">
+            <img src="../asets/carousel2.jpg" class="img-fluid " alt="..." style="height: 100%;">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -78,7 +78,7 @@
       <div class="card m-3" style="max-width: 540px; cursor:pointer;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="/asets/carousel3.jpg" class="img-fluid" alt="..." style="height: 100%;">
+            <img src="../asets/carousel3.jpg" class="img-fluid" alt="..." style="height: 100%;">
           </div>
           <div class="col-md-8">
             <div class="card-body">
